--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -65,6 +65,12 @@
     <Compile Include="Forms\Conducteurs.Designer.cs">
       <DependentUpon>Conducteurs.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MAJConducteur.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MAJConducteur.Designer.cs">
+      <DependentUpon>MAJConducteur.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Vehicules.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Conducteurs.resx">
       <DependentUpon>Conducteurs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MAJConducteur.resx">
+      <DependentUpon>MAJConducteur.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Vehicules.resx">
       <DependentUpon>Vehicules.cs</DependentUpon>
