--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes Globale\CmbMatNom.cs" />
+    <Compile Include="Classes Globale\Commandes.cs" />
     <Compile Include="Classes Globale\GLB.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
