--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Forms\MAJConducteur.Designer.cs">
       <DependentUpon>MAJConducteur.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MajVehicules.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MajVehicules.Designer.cs">
+      <DependentUpon>MajVehicules.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Vehicules.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MAJConducteur.resx">
       <DependentUpon>MAJConducteur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MajVehicules.resx">
+      <DependentUpon>MajVehicules.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Vehicules.resx">
       <DependentUpon>Vehicules.cs</DependentUpon>
