--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -126,6 +126,18 @@
     <Compile Include="Forms\MajVehicules.Designer.cs">
       <DependentUpon>MajVehicules.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Reparation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Reparation.Designer.cs">
+      <DependentUpon>Reparation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Transport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Transport.Designer.cs">
+      <DependentUpon>Transport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Vehicules.cs">
       <SubType>Form</SubType>
     </Compile>
