--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -120,6 +120,12 @@
     <Compile Include="Forms\MAJConducteur.Designer.cs">
       <DependentUpon>MAJConducteur.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MajReparation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MajReparation.Designer.cs">
+      <DependentUpon>MajReparation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MajVehicules.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -160,6 +166,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MAJConducteur.resx">
       <DependentUpon>MAJConducteur.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MajReparation.resx">
+      <DependentUpon>MajReparation.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MajVehicules.resx">
       <DependentUpon>MajVehicules.cs</DependentUpon>
