--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -126,6 +126,12 @@
     <Compile Include="Forms\MajReparation.Designer.cs">
       <DependentUpon>MajReparation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\MajTransport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MajTransport.Designer.cs">
+      <DependentUpon>MajTransport.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\MajVehicules.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,6 +175,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MajReparation.resx">
       <DependentUpon>MajReparation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\MajTransport.resx">
+      <DependentUpon>MajTransport.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\MajVehicules.resx">
       <DependentUpon>MajVehicules.cs</DependentUpon>
