--- a/ParcAuto/packages.config
+++ b/ParcAuto/packages.config
@@ -1,12 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Google.Apis" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Calendar.v3" version="1.57.0.2696" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.57.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.116.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.116.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
