create Form Vehicules Location and M.rouge

--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -210,6 +210,18 @@
     <Compile Include="Forms\Vehicules.Designer.cs">
       <DependentUpon>Vehicules.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Vehicules_Location.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Vehicules_Location.Designer.cs">
+      <DependentUpon>Vehicules_Location.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Vehicules_MRouge.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Vehicules_MRouge.Designer.cs">
+      <DependentUpon>Vehicules_MRouge.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="CrystalReport\Vehicules.rpt">
@@ -251,6 +263,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Vehicules.resx">
       <DependentUpon>Vehicules.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Vehicules_Location.resx">
+      <DependentUpon>Vehicules_Location.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Vehicules_MRouge.resx">
+      <DependentUpon>Vehicules_MRouge.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
