--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -222,6 +222,12 @@
     <Compile Include="Forms\Vehicules.Designer.cs">
       <DependentUpon>Vehicules.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\VehiculesPRD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\VehiculesPRD.Designer.cs">
+      <DependentUpon>VehiculesPRD.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Vehicules_Location.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -281,6 +287,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Vehicules.resx">
       <DependentUpon>Vehicules.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\VehiculesPRD.resx">
+      <DependentUpon>VehiculesPRD.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Vehicules_Location.resx">
       <DependentUpon>Vehicules_Location.cs</DependentUpon>
