--- a/ParcAuto/packages.config
+++ b/ParcAuto/packages.config
@@ -5,6 +5,7 @@
   <package id="Google.Apis.Auth" version="1.57.0" targetFramework="net472" />
   <package id="Google.Apis.Calendar.v3" version="1.57.0.2696" targetFramework="net472" />
   <package id="Google.Apis.Core" version="1.57.0" targetFramework="net472" />
+  <package id="GuiLabs.Undo" version="1.0.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.116.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net472" />
