--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -137,6 +137,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\AjouterUneDirection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\AjouterUneDirection.Designer.cs">
+      <DependentUpon>AjouterUneDirection.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Annee.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -273,6 +279,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AjouterUneDirection.resx">
+      <DependentUpon>AjouterUneDirection.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Annee.resx">
       <DependentUpon>Annee.cs</DependentUpon>
