--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -251,6 +251,12 @@
     <Compile Include="Forms\Misssions.Designer.cs">
       <DependentUpon>Misssions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\NombreDeCourriersParEntite.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\NombreDeCourriersParEntite.Designer.cs">
+      <DependentUpon>NombreDeCourriersParEntite.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Reparation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -360,6 +366,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Misssions.resx">
       <DependentUpon>Misssions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\NombreDeCourriersParEntite.resx">
+      <DependentUpon>NombreDeCourriersParEntite.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Reparation.resx">
       <DependentUpon>Reparation.cs</DependentUpon>
