--- a/ParcAuto/ParcAuto.csproj
+++ b/ParcAuto/ParcAuto.csproj
@@ -182,6 +182,12 @@
     <Compile Include="Forms\EtatRecap.Designer.cs">
       <DependentUpon>EtatRecap.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\GestionDesUtilisateurs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\GestionDesUtilisateurs.Designer.cs">
+      <DependentUpon>GestionDesUtilisateurs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -354,6 +360,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\EtatRecap.resx">
       <DependentUpon>EtatRecap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\GestionDesUtilisateurs.resx">
+      <DependentUpon>GestionDesUtilisateurs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
